--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
     <footer>
         <p>Roshan Joshi</p>
         <div class="Social">
-            <a href="https://www.facebook.com/roshan.joshi.568294/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/roshanjoshi111/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UChqNZGFvACiEhJ_ryTntyuA"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/roshan.joshi.568294/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/roshanjoshi111/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UChqNZGFvACiEhJ_ryTntyuA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
