--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!------Contact Me------>
     <div class="contact-me">
-        <p>Let Me Get You A Beautiful Website.</p>
+        <p>Let Me Get You A Beautiful and Nice Website .</p>
         <a class="button-two" href="#">Hire Me</a>
     </div>
     <!---footer start----->
